--- a/config/_default/hugo.toml
+++ b/config/_default/hugo.toml
@@ -243,3 +243,7 @@ enableRobotsTXT = true
         # schema = true
         ## JsonLD (cannot validate permalink)
         # jsonLD = true
+
+[caches]
+  [caches.images]
+    dir = ':cacheDir/images'
